--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,11 +11,21 @@
     <!-- <link rel="stylesheet" href="https://bootswatch.com/4/united/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="../public/css/bootstrap.min.css">
     <title>MVC Express.js</title>
+
+    <style>
+        body {
+            padding: 0px !important;
+        }
+
+        .container-fluid {
+            padding: 0%;
+        }
+    </style>
 </head>
 
 <body>
 
-    <div class="container">
+    <div class="container-fluid">
         <%- body %>
     </div>
 
